[SPv175] Use the parent of css clip as clip state of a composited layer

We need to apply the css clip in the composited layer.

Bug: 815113
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I347481df0bf820ed5b2e5c8f33d32b9fbd4dc0c4
Reviewed-on: https://chromium-review.googlesource.com/941542
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540021}
Former-commit-id: 08d0991aa4a543be32b43d3672735cf982e46471